--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title><! -- aMy First Webpage</title>
+        <title><! -- My First Webpage</title>
     </head>
 
     <body>
