--- a/odin-links-and-images/pages/about.html
+++ b/odin-links-and-images/pages/about.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <img src="../images/dog.jpg">
+  <img src="../asdimages/dog.jpg" alt="Köpek fotosu">>
 </body>
 </html>
